# predator-prey-sim

./: .gitignore  CMakeLIsts.txt  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: boids_energy_spawner.launch.py  boids_turtle_spawner.launch.py  energy_turtle_spawner.launch.py  multi_prey_energy_efficient.launch.py  turtle_spawner.launch.py
src/: boids_prey_controller.cpp  energy_efficient_predator_controller.cpp  energy_predator_controller.cpp  multi_prey_boids_controller.cpp  predator_controller.cpp  predator_node.cpp  prey_node.cpp  spawner_node.cpp  turtle_controller.cpp  turtle_manager.cpp
